見た目の調整
概要表の列の順番を変更
説明漏れを修正

--- a/replay-analyzer.html
+++ b/replay-analyzer.html
@@ -45,41 +45,41 @@
     <table id="summary-table" class="detail-table">
       <thead>
         <tr id="master-summary-thead" hidden>
-          <th class="detail-table--th">マスター</th>
-          <th class="detail-table--th">試合</th>
+          <th class="detail-table--th">試合数</th>
           <th class="detail-table--th">勝率</th>
           <th class="detail-table--th">勝</th>
           <th class="detail-table--th">敗</th>
+          <th class="detail-table--th">マスター</th>
         </tr>
         <tr id="deck-summary-thead" hidden>
+          <th class="detail-table--th">試合数</th>
+          <th class="detail-table--th">勝率</th>
+          <th class="detail-table--th">勝</th>
+          <th class="detail-table--th">敗</th>
           <th class="detail-table--th">マスター</th>
           <th class="detail-table--th">デッキ</th>
-          <th class="detail-table--th">試合</th>
-          <th class="detail-table--th">勝率</th>
-          <th class="detail-table--th">勝</th>
-          <th class="detail-table--th">敗</th>
         </tr>
         <tr id="card-summary-thead" hidden>
+          <th class="detail-table--th">試合数</th>
+          <th class="detail-table--th">勝率</th>
+          <th class="detail-table--th">勝</th>
+          <th class="detail-table--th">敗</th>
           <th class="detail-table--th">カード</th>
           <!--th>延べ枚数</th-->
-          <th class="detail-table--th">試合</th>
-          <th class="detail-table--th">勝率</th>
-          <th class="detail-table--th">勝</th>
-          <th class="detail-table--th">敗</th>
         </tr>
         <tr id="duration-summary-thead" hidden>
-          <th class="detail-table--th">試合時間</th>
-          <th class="detail-table--th">試合</th>
+          <th class="detail-table--th">試合数</th>
           <th class="detail-table--th">勝率</th>
           <th class="detail-table--th">勝</th>
           <th class="detail-table--th">敗</th>
+          <th class="detail-table--th">試合時間</th>
         </tr>
         <tr id="game-mode-summary-thead" hidden>
-          <th class="detail-table--th">モード</th>
-          <th class="detail-table--th">試合</th>
+          <th class="detail-table--th">試合数</th>
           <th class="detail-table--th">勝率</th>
           <th class="detail-table--th">勝</th>
           <th class="detail-table--th">敗</th>
+          <th class="detail-table--th">モード</th>
         </tr>
       <tfoot class="detail-table--tfoot">
         <tr>
@@ -186,7 +186,7 @@
     仕様について
     <ul>
       <li>複数選択で何も選択しない場合は、全て選択している場合と同じ動作になります。</li>
-      <li>試合のプレイヤーは自分>相方>敵の順に並び替えられます。</li>
+      <li>試合のプレイヤーはあなた>相方>勝者>その他の順に並び替えられます。</li>
       <li>「あなたの名前」には試合数が一番多いプレイヤーの名前が自動的に設定されます。</li>
     </ul>
   </div>
